Re-add appsettings.json to version control - added appsettings.local

--- a/.gitignore
+++ b/.gitignore
@@ -362,5 +362,6 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-# appsettings
-appsettings*.json
+# Ignoriere nur die lokale AppSettings-Datei
+appsettings.Local.json
+appsettings.Development.json
