Added: AuthDbContext + Migration + updated database. seeded superadmin and added registerpage

--- a/QuestBoard/appsettings.json
+++ b/QuestBoard/appsettings.json
@@ -7,6 +7,15 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "QuestboardDbConnectionString": "Server=XXX; Database=XXX;Trusted_Connection=True;TrustServerCertificate=Yes"
+    "QuestboardDbConnectionString": "Server=XXX; Database=XXX;Trusted_Connection=True;TrustServerCertificate=Yes",
+    "QuestboardAuthDbConnectionString": "Server=XXX; Database=XXX;Trusted_Connection=True;TrustServerCertificate=Yes"
+  },
+
+  "AppSettings": {
+    "SuperAdminEmail": "CHANGEME@EMAIL.COM",
+    "SuperAdminPassword": "CHANGEME!",
+    "adminRoleId": "CHANGE", // add a Guid Type
+    "superAdminRoleId": "CHANGE", // add a Guid Type
+    "useRoleId": "CHANGE" // add a Guid Type
   }
 }
