added: admin functions to manage users

--- a/QuestBoard/appsettings.json
+++ b/QuestBoard/appsettings.json
@@ -13,7 +13,7 @@
 
   "AppSettings": {
     "SuperAdminEmail": "CHANGEME@EMAIL.COM",
-    "SuperAdminPassword": "CHANGEME!",
+    "SuperAdminPassword": "CHANGEme123!",
     "adminRoleId": "CHANGE", // add a Guid Type
     "superAdminRoleId": "CHANGE", // add a Guid Type
     "useRoleId": "CHANGE" // add a Guid Type
