--- a/.gitignore
+++ b/.gitignore
@@ -366,6 +366,6 @@ FodyWeavers.xsd
 appsettings.Local.json
 appsettings.Development.json
 
-# Ignore uploaded Data
-*UploadedFiles
-!UploadedFiles/ProfilPictures/DefaultPicxcfInvert.png
+# Alle Dateien im Ordner `UploadedFiles` ignorieren
+UploadedFiles/
+
