README: Getting started section appsettings: added default guids

--- a/QuestBoard/appsettings.json
+++ b/QuestBoard/appsettings.json
@@ -14,8 +14,8 @@
   "AppSettings": {
     "SuperAdminEmail": "CHANGEME@EMAIL.COM",
     "SuperAdminPassword": "CHANGEme123!",
-    "adminRoleId": "CHANGE", // add a Guid Type
-    "superAdminRoleId": "CHANGE", // add a Guid Type
-    "useRoleId": "CHANGE" // add a Guid Type
+    "adminRoleId": "3651076e-9ddc-4048-b896-43c289c2dc8d",
+    "superAdminRoleId": "cf86bdd0-c579-4c32-ba55-cbc350ac9c84", 
+    "useRoleId": "472f1f5c-1447-4723-9eff-4e43b1feddb6" 
   }
 }
